<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            app:title="@string/aqi_info" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/spacing_l">

            <io.github.sainiharry.fume.info.DotBulbView
                android:layout_width="@dimen/dot_bulb_view_size"
                android:layout_height="@dimen/dot_bulb_view_size"
                android:layout_gravity="center"
                app:dotColor="@color/aqi_low"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/low_pollution_info_title"
                android:textAppearance="?textAppearanceSubtitle2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_pollution_info_body"
                android:textAppearance="?textAppearanceBody2" />

            <io.github.sainiharry.fume.info.DotBulbView
                android:layout_width="@dimen/dot_bulb_view_size"
                android:layout_height="@dimen/dot_bulb_view_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_xl"
                app:dotColor="@color/aqi_moderate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/moderate_pollution_info_title"
                android:textAppearance="?textAppearanceSubtitle2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moderate_pollution_info_body"
                android:textAppearance="?textAppearanceBody2" />

            <io.github.sainiharry.fume.info.DotBulbView
                android:layout_width="@dimen/dot_bulb_view_size"
                android:layout_height="@dimen/dot_bulb_view_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_xl"
                app:dotColor="@color/aqi_high"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/high_pollution_info_title"
                android:textAppearance="?textAppearanceSubtitle2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_pollution_info_body"
                android:textAppearance="?textAppearanceBody2" />

            <io.github.sainiharry.fume.info.DotBulbView
                android:layout_width="@dimen/dot_bulb_view_size"
                android:layout_height="@dimen/dot_bulb_view_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_xl"
                app:dotColor="@color/aqi_very_high"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/very_high_pollution_info_title"
                android:textAppearance="?textAppearanceSubtitle2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/very_high_pollution_info_body"
                android:textAppearance="?textAppearanceBody2" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
